fix final SA test, there is still one TODO
Signed-off-by: Caio Luke <caioluke97@gmail.com>